--- a/Prefs/Resources/Root.plist
+++ b/Prefs/Resources/Root.plist
@@ -31,6 +31,20 @@
 			<key>PostNotification</key>
 			<string>love.litten.safariwallpaperpreferences/ReloadPrefs</string>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>love.litten.safariwallpaperpreferences</string>
+			<key>key</key>
+			<string>useSpringBoardWallpaper</string>
+			<key>label</key>
+			<string>Use SpringBoard Wallpaper</string>
+			<key>PostNotification</key>
+			<string>love.litten.safariwallpaperpreferences/ReloadPrefs</string>
+		</dict>
 
 		<dict>
 			<key>cell</key>
