--- a/Tweak/Makefile
+++ b/Tweak/Makefile
@@ -10,6 +10,7 @@ $(TWEAK_NAME)_FILES = Tweak.x
 $(TWEAK_NAME)_CFLAGS = -fobjc-arc
 $(TWEAK_NAME)_FRAMEWORKS = UIKit
 $(TWEAK_NAME)_EXTRA_FRAMEWORKS = Cephei
+$(TWEAK_NAME)_PRIVATE_FRAMEWORKS = AppSupport
 $(TWEAK_NAME)_LIBRARIES = imagepicker
 
 include $(THEOS_MAKE_PATH)/tweak.mk
